# Eira

./: .gitignore  CLAUDE.md  README.md  TASK.md  dev.sh  vetur.config.js
backend/: pyproject.toml
backend/app/: deps.py  main.py  openapi_errors.py
backend/app/core/: config.py  database.py  ferie_slots.py  login_attempts.py  security.py
backend/app/models/: __init__.py  cambio_turno.py  consegna_sbar.py  diario_cedema.py  enums.py  farmaco.py  ferie.py  parametri_vitali.py  password_reset.py  paziente.py  profilo_infermiere.py  reparto.py  turno.py  utente.py  valutazione.py
backend/app/routers/: auth.py  banca_ore.py  cambi_turno.py  carello_farmaci.py  consegne_sbar.py  dashboard.py  diario_cedema.py  ferie.py  parametri_vitali.py  pazienti.py  reparti.py  turni.py  utenti.py  valutazioni.py
backend/app/schemas/: auth.py  banca_ore.py  cambio_turno.py  consegna_sbar.py  dashboard.py  diario_cedema.py  farmaco.py  ferie.py  parametri_vitali.py  paziente.py  turno.py  utente.py  valutazione.py
backend/scripts/: seed_mock_data.py
backend/tests/: conftest.py  test_auth.py  test_banca_ore.py  test_cambi_turno.py  test_carello_farmaci.py  test_consegne_sbar.py  test_dashboard.py  test_diario_cedema.py  test_ferie.py  test_parametri_vitali.py  test_pazienti.py  test_reparti.py  test_security.py  test_startup_config.py  test_turni.py  test_utenti.py  test_valutazioni.py
docs/: BACKEND-ARCHITECTURE.md  DESIGN.md  FETCHING.md  FRONTEND-ARCHITECTURE.md  FRONTEND-CODE-REFACTOR.md  GLOSSARY.md  PERFORMANCE-AUDIT.md  PRODUCT.md  README.md  SECURITY.md  SETUP.md  (+3 more)
(+167 files in other folders)
