[project]
name = "eira-backend"
version = "0.1.0"
description = "Eira — API gestione consegne infermieristiche (SBAR)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]
