[project]
name = "eira-backend"
version = "0.1.0"
description = "Eira — API gestione consegne infermieristiche (SBAR)"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
