[project]
name = "eira-backend"
version = "0.1.0"
description = "Eira — API gestione consegne infermieristiche (SBAR)"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0",
    "fastapi[standard]>=0.139.0",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "faker>=40.31.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]
